# NoActivate

./: .gitignore  CMakeLists.txt  NoActivate.cpp  NoActivate_res.rc
